# procon-compe32

./: .gitignore  README.md  result-gui.txt
procon-compe30/: README.md
procon-compe30/src/search/: AccessServer.cpp  AccessServer.h  Act.cpp  Act.h  Action.cpp  Action.h  ActionReader.cpp  ActionReader.h  Agent.cpp  Agent.h  Battle.cpp  Battle.h  CMakeLists.txt  Command.cpp  Command.h  Convolution.cpp  Convolution.h  Field.cpp  Field.h  FieldReader.cpp  FieldReader.h  Greedy.cpp  Greedy.h  Human.cpp  Human.h  LocalBattle.cpp  Makefile  Match.cpp  Match.h  MatchReader.cpp  MatchReader.h  OptionArg.cpp  OptionArg.h  Player.cpp  Player.h  Point.cpp  Point.h  ScoreCalculate.cpp  ScoreCalculate.h  State.cpp  (+36 more)
procon-compe30/src/search/Utility/: Array.cpp  Array.h  Box.h  CMakeLists.txt  Color.h  Makefile
procon-compe30/src/search/testcase/: test01.in.txt  test02.in.txt  test03.in.txt  test04.in.txt  test05.in.txt  test06.in.txt  test07.in.txt  test08.in.txt  test09.in.txt  test10.in.txt  test11.in.txt  test12.in.txt  test13.in.txt  test14.in.txt  testfield.txt
procon-compe32-gui/: Untitled.ipynb  procon-compe32-gui.sln  readPPMFile.py
procon-compe32-search2/: data.hpp  eval.cpp  eval.hpp  eval2.cpp  eval2.hpp  main.cpp  makefile  output.cpp  result.txt  search.cpp  search.hpp  search2.cpp  search2.hpp  solution.txt  solution2.txt
procon-compe32-serch/: client.py  data.hpp  eval.cpp  eval.hpp  main.cpp  makefile  output.cpp  output.hpp  search.cpp  search.hpp  swap.cpp  swap.hpp
procon32_sample/: Dockerfile  client.py  problemcon2の答え.txt  procon32.py  result.txt  (+3 more)
(+39 files in other folders)
